# optimized_motion_planner

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/example/: generate_obstacle.hpp
include/motion_planning/: RRTX.hpp  RRTX_node.hpp  dynamic_obstacle.hpp  obstacle.hpp  static_obstacle.hpp
include/optimizer/: CHOMP_dynamic.hpp  CHOMP_dynamic_cost.hpp  CHOMP_dynamic_trajectory.hpp
include/utils/: optimizer_params.hpp  types.hpp  utility_functions.hpp
launch/: example.launch  test.launch
msg/: obstacle_info.msg
params/: optimized_motion_planner.yaml
src/example/: generate_obstacle.cpp  generate_obstacle_node.cpp  start_example.cpp
src/motion_planning/: RRTX.cpp  RRTX_node.cpp  dynamic_obstacle.cpp  motion_planning_node.cpp
src/optimizer/: CHOMP_dynamic.cpp  CHOMP_dynamic_cost.cpp  CHOMP_dynamic_trajectory.cpp
