<?xml version="1.0"?>
<package format="2">
  <name>optimized_motion_planner</name>
  <version>0.0.1</version>
  <description>The optimized_motion_planner package</description>
  <maintainer email="yufei.zhu@outlook.com">yufei</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nav_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>polynomial_trajectories</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>

</package>
